--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="notificationSystem">
 <head>
-	<title>Gossip Girl</title>
+	<title>Gossip Girl Database Watcher</title>
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
     <base href="/">
